2006-10-23 Borut Razem <borut.razem AT siol.net>

	* support/sdcc_theme.pl: corect doubled </HEAD>

2006-10-22 Borut Razem <borut.razem AT siol.net>

	* support/sdcc_theme_navbar.html: deleted
	* support/sdcc_theme.pl: don't use sdcc_theme_navbar.html, insert
	  favicon to the html docummentation
	* lib/doc-archive: changed sdcc_theme.pl command line
	* components/sdcc-web.mk: added
	* Makefile: inluded components/sdcc-web.mk

2006-10-18 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: create .htaccess so that .html files
	  are PHP processed
	* support/sdcc_theme_navbar.html: include ../../left_menu.inc

2006-09-05 Borut Razem <borut.razem AT siol.net>

	* components/sdcc-extra.mk: don't build sdcc-extra if cross compiling

2006-08-31 Borut Razem <borut.razem AT siol.net>

	* local/x86-linux1-i586-mingw32msvc.mk, local/x86-linux2-i586-mingw32msvc.mk:
	  enabled ucsim cross compilation (removed --disable-ucsim)

2006-08-12 Borut Razem <borut.razem AT siol.net>

	* lib/src-archive.mk: use do-upload for snapshot and doc uploading
	  to sdcc WEB
	* lib/upload.mk: remove htdocs/* if rsync succeeded

2006-08-09 Borut Razem <borut.razem AT siol.net>

	* local/x86-linux2.mk, local/openpower-linux1.mk, local/amd64-linux1.mk,
	  local/amd64-linux1, local/ucf-cf-alpha-linux1.mk: changed glibc version
	  number from 2.2 to 2.3
	* local/ppc-osx3.mk, local/sparc-solaris1.mk: removed (g)libc version number
	* lib/variables.mk: default HOSTOS and TARGETOS are unknown-unknown-unknown

2006-08-01 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.k, lib/doc-archive.mk, lib/src-archive.mk:
	  changed package formats from *.tar.gz to *.tar.bz2
	* components/sdcc-extra.mk: corrected configure source to sdcc-extra

2006-07-28 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: add doc/*.html to the doc archive

2006-07-12 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: copy the contents of doc directory
