@@ -1,3 +1,7 @@
+2006-10-30 Borut Razem <borut.razem AT siol.net>
+
+	* lib/bootstrap.mk: add readline5.dll to packages if cross compiling
+
 2006-10-23 Borut Razem <borut.razem AT siol.net>
 
 	* support/sdcc_theme.pl: corect doubled </HEAD>
